--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version-file: blog/.nvmrc
+          node-version-file: .nvmrc
 
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
