--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-apple",
+  "name": "bgeise",
   "version": "3.2.0",
-  "description": "Gatsby blog starter kit with beautiful and responsive design",
+  "description": "Brandon Geise personal webpage",
   "private": true,
   "engines": {
     "node": ">=20"
@@ -84,7 +84,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sungik-choi/gatsby-starter-apple.git"
+    "url": "https://github.com/bdgeise/bgeise.github.io"
   },
   "keywords": [
     "gatsby",
@@ -95,11 +95,11 @@
     "template",
     "starter"
   ],
-  "author": "Sungik Choi <sungik.dev@gmail.com> (http://sungikchoi.com/)",
+  "author": "Brandon Geise <brandongeise@gmail.com> (http://bgeise.com/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sungik-choi/gatsby-starter-apple/issues"
+    "url": "https://github.com/bdgeise/bgeise.github.io/issues"
   },
-  "homepage": "https://github.com/sungik-choi/gatsby-starter-apple#readme",
+  "homepage": "https://github.com/bdgeise/bgeise.github.io",
   "packageManager": "yarn@4.0.2"
 }
