--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ node_modules/
 # Yarn
 # @see https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
 .pnp.*
-.yarn/
+.yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
